--- a/web/translation/translate.en_US.toml
+++ b/web/translation/translate.en_US.toml
@@ -1,12 +1,108 @@
-"username" = "username"
-"password" = "password"
-"login" = "login"
-"confirm" = "confirm"
-"cancel" = "cancel"
-"close" = "close"
-"copy" = "copy"
-"copied" = "copied"
-"download" = "download"
-"remark" = "remark"
-"enable" = "enable"
-"protocol" = "protocol"
+# html/login.html
+"username" = " Username "
+"password" = "Password"
+"login" = "Login"
+"confirm" = "Confirm"
+"cancel" = "Cancel"
+"close" = "Close"
+"copy" = "Copy"
+"copied" = " Copied "
+"download" = "Download"
+"remark" = "Remark"
+"enable" = "Enable"
+"protocol" = "Protocol"
+
+# html/setting.html
+"updateAllSetting" = " Save configuration "
+"restartPanel" = " Restart Panel "
+"panelConfiguration" = " Panel Configuration "
+"panelMonitoringIP" = " Panel Monitoring IP "
+"panelMonitoringIPDesc" = " Leave blank by default to monitor all IPs, restart the panel to take effect "
+"panelMonitoringPort" = " Panel Monitoring Port "
+"panelMonitoringPortDesc" = " Restart panel to take effect "
+"panelCertificatePublicKey" = " Panel certificate public key file path "
+"panelCertificatePublicKeyDesc" = " Fill in an absolute path starting with'/', restart the panel to take effect "
+"panelCertificateKey" = " Panel certificate key file path "
+"panelCertificateKeyDesc" = " Fill in an absolute path starting with'/', restart the panel to take effect "
+"panelURLRootPath" = " Panel URL Root Path "
+panelURLRootPathDesc = " Must start with'/' and end with'/', restart the panel to take effect "
+
+"userSettings" = " User Settings "
+"oldUsername" = " Old Username "
+"oldPassword" = " Old Password "
+"newUsername" = " New Username "
+"newPassword" = " New Password "
+"updateUser" = "Update User"
+"xraySettings" = " xray related settings "
+"xrayConfigTemplate" = " xray Configuration Template "
+"xrayConfigTemplateDesc" = " Generate the final xray configuration file based on this template, and restart the panel to take effect "
+"otherSettings" = " Other Settings "
+"timezone" = "Time Zone"
+"timezoneDesc" = " Timed tasks run according to the time in this time zone, and restart the panel to take effect "
+
+"confirmRestart" = " Are you sure you want to restart the panel? Click OK to restart in 3 seconds. If you cannot access the panel after restarting, please go to the server to view the panel log information "
+
+# html/index.html
+"memory" = "Memory"
+"disk" = "Disk"
+"xrayStatus" = "Xray Status"
+"switchVersion" = " switch version "
+"Uptime" = " runtime "
+"uptimeDesc" = " The running time of the system since it was started "
+"loads" = " System Load "
+"connections" = " number of tcp / udp connections "
+"connectionsDesc" = " Total number of connections for all network cards "
+"uploadSpeed" = " Total upload speed of all network cards "
+"downloadSpeed" = " Total download speed of all network cards "
+"uploadTraffic" = " Total upload traffic of all network cards since the system started "
+"downloadTraffic" = " Total download traffic of all network cards since the system started "
+
+"switchVersionHelp" = " Click the version you want to switch "
+"switchVersionWarning" = " Please choose carefully, the old version may be incompatible with the configuration "
+"loading" = " Loading "
+
+"switchXrayVersion" = " Switch xray version "
+"sureSwitchXrayVersion" = " Whether to switch xray version to "
+"waitOnPageDuringInstallation" = " Installing, please do not refresh this page "
+
+# html/inbounds.html
+"weakPasswordWarning" = "Please go to the panel settings as soon as possible to modify the username and password, otherwise there may be a risk of leaking account information"
+"totalUploadsDownloads" = " Total Uploads/Downloads "
+"totalTraffic" = " Total Traffic "
+"accountsNumber" = " Inbound Quantity "
+"search" = "Search"  # now unused
+"act" = "Act"
+"qrcode" = " QR code "
+"edit" = " Edit "
+"resetTraffic" = " Reset Traffic "
+"sureResetTraffic" = " Are you sure you want to reset the traffic? "
+"reset" = "Reset"
+"delete" = "Delete"
+"unlimited" = " unlimited "
+"view" = "View"
+"none" = "None"
+"indefinitely" = " indefinitely "
+"port" = "Port"
+"traffic" = "Trafic ↑|↓"
+"settings" = " Details "
+"stream" = " Transmission Configuration "
+"expiryTime" = " Expiry Time "
+"addInbound" = " Add Inbound "
+"add" = "Add"
+"modifyInbound" = " Modify Inbound "
+"modify" = "Modify"
+"deleteInbound" = " Delete Inbound "
+"sureDeleteInbound" = " Are you sure you want to delete the inbound? "
+"delete" = "Delete"
+
+# html/inbounds_info_modal.html
+"copyLink" = " Copy Link "
+"copySuccessful" = " Copy successful "
+
+# html/common_spider.html
+"systemStatus" = " System Status "
+"inboundsList" = " Inbound List "
+"panelSettings" = " Panel Settings "
+"clients" = "Clients"  # now unused
+"other" = "Other"
+"logout" = " Logout "
